# Data-Analytics-Portfolio

./: .gitattributes  .gitignore  AUDIT.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: fetch_data.py  generate_data.py
notebooks/: 01_eda_and_business_framing.ipynb  02_cohort_and_retention_analysis.ipynb  03_funnel_analysis.ipynb  04_ab_testing_complete.ipynb  05_metric_definition_and_product_sense.ipynb  06_metric_drop_investigation.ipynb  07_statistical_inference.ipynb
src/analytics/: __init__.py  build.py  config.py  load.py  metrics.py  transform.py  validate.py
tests/: test_pipeline.py
web/: package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: Charts.tsx  Dashboard.tsx  Explorer.tsx  KpiCards.tsx  Tip.tsx
web/lib/: duckdb.ts  format.ts
web/public/data/: categories.json  funnel.json  kpis.json  monthly.json  outcomes.json  states.json
