[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "olist-analytics"
version = "0.1.0"
description = "Production-grade e-commerce analytics pipeline + notebooks on the real Olist Brazilian marketplace dataset"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Shivani Bokka", email = "shivani.bokka93@gmail.com" }]
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "duckdb>=1.0",
    "pandera>=0.20",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scipy>=1.12",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = ["ruff>=0.5", "pytest>=8.0", "nbmake>=1.5", "ipykernel>=6.29", "jupyter>=1.0"]

[project.scripts]
build-analytics = "analytics.build:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
